# main.go
@@ -46,6 +46,10 @@ func main() {
 	schoolService := service.NewSchoolService(schoolRepository, neisNetworkRequest)
 	schoolController := controller.NewSchoolController(schoolService)
 
+	geminiNetworkRequest := network.NewGeminiRequest()
+	geminiService := service.NewGeminiService(geminiNetworkRequest)
+	suggestController := controller.NewSuggestController(geminiService)
+
 	// App
 	app := fiber.New(fiber.Config{
 		ErrorHandler: controller.GlobalErrorHandler,
@@ -60,6 +64,7 @@ func main() {
 	v1 := api.Group("/v1")
 	v1.Get("/schools", schoolController.List)
 	v1.Get("/schools/meals", schoolController.ListMeals)
+	v1.Post("/suggest", suggestController.Suggest)
 
 	log.Println("listening on :" + config.Port)
 	app.Listen(":" + config.Port)
